[gd_scene load_steps=14 format=2]

[ext_resource path="res://Theme/kenneyUI-red.tres" type="Theme" id=1]
[ext_resource path="res://Icons/y_button.png" type="Texture" id=2]
[ext_resource path="res://Icons/stick_left.png" type="Texture" id=3]
[ext_resource path="res://Icons/stick_righ.png" type="Texture" id=4]
[ext_resource path="res://Icons/bumper.png" type="Texture" id=5]
[ext_resource path="res://Icons/x_button.png" type="Texture" id=6]
[ext_resource path="res://Icons/b_buttton.png" type="Texture" id=7]
[ext_resource path="res://Icons/a_button.png" type="Texture" id=8]
[ext_resource path="res://Icons/record_up.png" type="Texture" id=9]
[ext_resource path="res://Icons/record_down.png" type="Texture" id=10]
[ext_resource path="res://Menus/create_character_menu.gd" type="Script" id=11]
[ext_resource path="res://Menus/button_hbox.tscn" type="PackedScene" id=12]
[ext_resource path="res://Icons/save.png" type="Texture" id=13]

[node name="create_character_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -300.0
margin_bottom = 300.0

[node name="frames" type="TextureRect" parent="VBoxContainer"]
margin_right = 644.0

[node name="pos" type="Node2D" parent="VBoxContainer/frames"]

[node name="left_arm_end" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="left_arm_base" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="right_arm_end" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="right_arm_base" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="chest_upper" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="chest_right" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="chest_left" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="chest_lower" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="left_leg_base" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="left_leg_end" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="right_leg_base" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="right_leg_end" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="left_head" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="right_head" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="center" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 320, 480, 320, 0 )
default_color = Color( 1, 0.4, 0.4, 0.309804 )

[node name="left_border" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( -5, 0, -5, 480 )
default_color = Color( 1, 1, 1, 1 )

[node name="top_border" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( -5, -5, 645, -5 )
default_color = Color( 1, 1, 1, 1 )

[node name="right_border" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( 645, 0, 645, 480 )
default_color = Color( 1, 1, 1, 1 )

[node name="bottom_border" type="Line2D" parent="VBoxContainer/frames"]
points = PoolVector2Array( -5, 485, 645, 485 )
default_color = Color( 1, 1, 1, 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 644.0
margin_bottom = 132.0

[node name="frame_select" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_right = 350.0
margin_bottom = 128.0
rect_min_size = Vector2( 350, 128 )

[node name="record" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 354.0
margin_right = 482.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
expand = true

[node name="frame_number" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 486.0
margin_right = 614.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 136.0
margin_right = 644.0
margin_bottom = 200.0

[node name="start" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_right = 118.866
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="stop" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 122.0
margin_right = 240.866
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="name" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 244.0
margin_right = 644.0
margin_bottom = 64.0
rect_min_size = Vector2( 400, 64 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -442.0
margin_bottom = 1052.0

[node name="block" parent="VBoxContainer2" instance=ExtResource( 12 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 442.0
margin_bottom = 128.0
button_path = ExtResource( 5 )

[node name="left" parent="VBoxContainer2" instance=ExtResource( 12 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 132.0
margin_right = 442.0
margin_bottom = 260.0
type = 1
button_path = ExtResource( 3 )

[node name="right" parent="VBoxContainer2" instance=ExtResource( 12 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 264.0
margin_right = 442.0
margin_bottom = 392.0
type = 2
button_path = ExtResource( 4 )

[node name="move1" parent="VBoxContainer2" instance=ExtResource( 12 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 396.0
margin_right = 442.0
margin_bottom = 524.0
type = 3
button_path = ExtResource( 8 )

[node name="move2" parent="VBoxContainer2" instance=ExtResource( 12 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 528.0
margin_right = 442.0
margin_bottom = 656.0
type = 4
button_path = ExtResource( 7 )

[node name="move3" parent="VBoxContainer2" instance=ExtResource( 12 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 660.0
margin_right = 442.0
margin_bottom = 788.0
type = 5
button_path = ExtResource( 6 )

[node name="move4" parent="VBoxContainer2" instance=ExtResource( 12 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 792.0
margin_right = 442.0
margin_bottom = 920.0
type = 6
button_path = ExtResource( 2 )

[node name="save" type="TextureButton" parent="VBoxContainer2"]
margin_top = 924.0
margin_right = 442.0
margin_bottom = 1052.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 13 )

[node name="back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -250.0
margin_right = 75.0
margin_bottom = -160.0
text = "BACK"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 250.0
margin_bottom = 147.0
text = "Record your moves!
-Select the move to record on the right
-Click the record button
-Click again to stop
-Choose frames to use"

[connection signal="toggled" from="VBoxContainer/HBoxContainer2/record" to="." method="_on_record_toggled"]
[connection signal="pressed" from="VBoxContainer2/save" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
